# learning-generative-ai

./: .gitignore  todo.sql
lang-chain/: section12.ipynb  section3.ipynb
lang-chain-theory-docs/: section3.ipynb
lang-graph/: section12.ipynb  section123.ipynb  section3.ipynb  section456.ipynb  sections12.ipynb
relection-agent/: chains.py  main.py  pyproject.toml
