[tool.poetry]
name = "lang-graph"
version = "0.1.0"
description = ""
authors = ["raj singh <rajsingh@rajs-MacBook-Air.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
black = "^24.10.0"
isort = "^5.13.2"
langchain = "^0.3.7"
langchain-openai = "^0.2.8"
langgraph = "^0.2.46"
grandalf = "^0.8"
langchain-ollama = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
